# Movie_Tinder_Rust_FE

./: Cargo.toml  index.html  read_me.md  style.css
src/: lib.rs  main.rs  model.rs  movie.rs  session.rs  session_id_input.rs
