[package]
name = "rust_front_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
stylist = { version = "0.12.0", feature = ["yew"] }
gloo-net = "0.2.4"

serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.95"

wasm-logger = "0.2.0"
log = "0.4.6"

wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", feature = ["HtmlInputElement"] }
